MP-2500 MP-2528: fix word wrapping in confirm modal

--- a/com.mobi.web/src/main/resources/public/ontology-editor/components/importsOverlay/importsOverlay.component.scss
+++ b/com.mobi.web/src/main/resources/public/ontology-editor/components/importsOverlay/importsOverlay.component.scss
@@ -58,4 +58,7 @@ imports-overlay {
             color: var(--danger-dark);
         }
     }
+    .selected-ontology {
+        word-wrap: break-word;
+    }
 }
